Fix alignment of checkboxes on small screens. Fixes #67

--- a/theme/bootstrapextend.css
+++ b/theme/bootstrapextend.css
@@ -96,6 +96,7 @@ label.strong {
 
 .box input.checkbox {
   margin-top: 0px;
+  display: inline-block;
 }
 
 #wrap input[type=text],
